apps/demeter/demeter-app.yaml


apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/name: demeter
    app.kubernetes.io/component: namespace
  name: demeter

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
 name: demeter
 namespace: demeter
spec:
  gateways:
    - istio-system/public
  hosts:
   - demeter.bigbang.dev
  http:
  - route:
    - destination:
        port:
          number: 80
        host: demeter
